Fixing sizing issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,6 @@ main {
     padding: 1rem;
     color: white;
     border-radius: 10px;
-    height: 100vh;
-    height: 100svh;
 }
 
 main > div {
@@ -274,8 +272,8 @@ main > img {
     }
 }
 
-@media (max-width: 560px) {
+/* @media (max-width: 560px) {
     main {
         padding: 7vh 0;
     }
-}
+} */
